# plurcast

./: .gitignore  BUILD_STATUS.md  CHANGELOG.md  CLEANUP_COMPLETE.md  COMPILATION_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  ERROR_LOG.md  KEYRING_QUICKSTART.md  LICENSE  PLATFORM_DECISION.md  README.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.2.0-alpha.md  SCHEDULING_BUGS.md  SECURITY_VERIFICATION.md  SETUP.md  TESTING_SUMMARY.md  UNDOCUMENTED_FEATURES.md  WARP.md  check_nostr_key.rs  generate-test-keys.ps1  migrate_keys.rs  shared-account-update.txt  test-keyring.ps1  test_e2e.ps1  test_scheduling.sh
.claude/: CLAUDE.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
.kiro/hooks/: cli-ux-implementer.md  documentation-review.kiro.hook  git-strategy-docs.kiro.hook  reports-issue-resolver.kiro.hook  rust-cli-conformance.kiro.hook  rust-platform-implementer.md  rust-test-validation.kiro.hook  security-review-hook.kiro.hook  security-review-on-pass.kiro.hook  spec-architect.md  spec-from-reports.kiro.hook  spec-requirements-analyst.md  testing-expert-review.kiro.hook
.kiro/reports/: ARCHITECTURAL_DECISIONS.md  README.md  SECURITY_REVIEW_SUMMARY.md  SECURITY_STATUS.md  security-action-plan.md  security-audit-2025-10-04.md  security-checklist.md  security-issues-tracker.md  security-quick-reference.md  security-review-2025-10-05.md  test-coverage-tracker.md  testing-analysis-2025-10-04.md  testing-quick-start.md
.kiro/specs/foundation-alpha-mvp/: design.md  requirements.md  tasks.md
.kiro/specs/gui-foundation/: design.md  requirements.md  tasks.md
.kiro/specs/input-validation-security/: design.md  requirements.md  tasks.md
.kiro/specs/multi-account-management/: design.md  requirements.md  tasks.md
.kiro/specs/multi-platform-alpha/: design.md  requirements.md  tasks.md
.kiro/specs/rust-cli-conformance/: requirements.md
.kiro/specs/scheduling/: design.md  tasks.md
.kiro/specs/secure-credentials/: design.md  requirements.md  tasks.md
.kiro/specs/service-layer-extraction/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/ssb-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: ARCHITECTURE.md  FUTURE.md  ROADMAP.md  TOOLS.md  VISION.md  main.md  main.md.old  product.md  structure.md  tech.md
docs/: ARCHIVED_TUI.md  DESIGN_REVIEW_2025_11_17.md  HARDWARE_KEY_SUPPORT_FEASIBILITY.md  KEYRING_PERSISTENCE_ISSUE.md  LOGGING_ENHANCEMENT_PROPOSAL.md  MEMORY_PROTECTION_IMPLEMENTATION.md  MULTI_ACCOUNT_MANUAL_TESTING.md  MULTI_ACCOUNT_MIGRATION.md  NOSTR_KEY_SECURITY_ANALYSIS.md  PHASE_3_2_TUI.md  RELEASE_NOTES_0.2.0-alpha.md  RUST_CLI_BOOK_COMPARISON.md  SECURITY.md  SECURITY_AUDIT_PRIVATE_KEYS.md  SERVICE_LAYER.md  SETUP.md  SSB_COMPARISON.md  SSB_CONFIG.md  SSB_SETUP.md  SSB_TROUBLESHOOTING.md  TESTING_CHECKLIST.md  TESTING_KEYRING.md  TESTING_OVERVIEW.md  TESTING_SUMMARY.md  TEST_NOSTR_FLOW.md  TROUBLESHOOTING.md  USAGE.md  VERSIONING.md  keyring-testing-flow.md
docs-site/: README.md  config.toml
docs-site/content/: _index.md
docs-site/content/community/: _index.md
docs-site/content/getting-started/: _index.md
docs-site/content/philosophy/: _index.md
docs-site/content/roadmap/: _index.md
docs-site/public/: atom.xml  index.html  robots.txt  search_index.en.js  sitemap.xml
docs-site/public/community/: index.html
docs-site/public/getting-started/: index.html
docs-site/public/philosophy/: index.html
docs-site/public/roadmap/: index.html
docs-site/templates/: base.html  index.html  page.html  section.html
docs/adr/: 001-multi-account-management.md
libplurcast/: Cargo.toml
libplurcast/examples/: cleanup_failed_posts.rs  credential_security.rs  generate_nostr_key.rs
libplurcast/migrations/: 001_initial.sql  002_scheduling_enhancements.sql  003_multi_account_tracking.sql  004_attachments.sql
libplurcast/src/: accounts.rs  config.rs  credentials.rs  db.rs  error.rs  lib.rs  logging.rs  poster.rs  rate_limiter.rs  scheduling.rs  types.rs
libplurcast/src/credentials/: tests.rs
libplurcast/src/service/: draft.rs  events.rs  history.rs  mod.rs  posting.rs  validation.rs
libplurcast/tests/: backward_compatibility.rs  credential_manager_test.rs  end_to_end.rs  memory_security.rs  multi_account_integration.rs  performance.rs  process_persistence.rs  security.rs  service_integration.rs  ssb_integration.rs
plur-creds/: Cargo.toml
plur-creds/src/: main.rs
plur-creds/tests/: integration_tests.rs
plur-export/: Cargo.toml
plur-export/src/: main.rs  ssb.rs
plur-history/: Cargo.toml
plur-history/src/: main.rs
plur-history/tests/: integration.rs
plur-import/: Cargo.toml
plur-import/src/: main.rs  ssb.rs
plur-import/tests/: ssb_import.rs
plur-post/: Cargo.toml
plur-post/src/: main.rs
plur-post/tests/: agent_friendly.rs  attack_scenarios.rs  backward_compatibility.rs  cli_21e8_test.rs  cli_integration.rs  e2e_posting.rs  error_handling_verification.rs  multi_account_integration.rs  multi_platform.rs  nostr_pow_integration.rs  scheduling_integration.rs  unix_philosophy.rs  validation_unit_tests.rs
plur-queue/: Cargo.toml
plur-queue/src/: main.rs
plur-queue/tests/: cancel_integration.rs  failed_posts_integration.rs  list_integration.rs  now_integration.rs  reschedule_integration.rs  stats_integration.rs
plur-send/: Cargo.toml
plur-send/src/: main.rs
plur-send/tests/: daemon_integration.rs  retry_rate_limiting.rs
plur-setup/: Cargo.toml
plur-setup/src/: main.rs
plur-tui/: Cargo.toml  README.md
plur-tui/src/: error.rs  lib.rs  main.rs  services.rs  terminal.rs
plur-tui/src/app/: actions.rs  event.rs  mod.rs  reducer.rs  state.rs
plur-tui/src/ui/: composer.rs  mod.rs
plur-tui/tests/: test_app_boot.rs  test_composer_state.rs  test_keymap.rs  test_posting_e2e.rs  test_textarea_integration.rs  test_validation_integration.rs
