[workspace]
members = ["libplurcast", "plur-post"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Plurcast Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plurcast/plurcast"

[workspace.dependencies]
# Platform clients
nostr-sdk = "0.35"
megalodon = "0.14"
atrium-api = "0.24"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
shellexpand = "3.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Testing
tempfile = "3.10"
