[package]
name = "plur-post"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "plur-post"
path = "src/main.rs"

[dependencies]
# Internal library
libplurcast = { path = "../libplurcast" }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
