[package]
name = "plur-post"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "plur-post"
path = "src/main.rs"

[dependencies]
# Internal library
libplurcast = { path = "../libplurcast" }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = "1.20"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = { workspace = true }
nostr-sdk = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
